--- a/html2.html
+++ b/html2.html
@@ -1,16 +1,269 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..600;1,100..600&display=swap" rel="stylesheet">
-    <title>informace o jezdcích a týmech</title>
-</head>
-<body>
-    div
-    
-</body>
-</html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..600;1,100..600&display=swap"
+            rel="stylesheet">
+        <title>informace o jezdcích a týmech</title>
+    </head>
+    <body>
+        <div class="menu">
+            <ul>
+                <li><a href="html2.html">informace o jezdcích a týmech</a></li>
+                <li><a href="html3.html">Šampionáty</a></li>
+                <li><a href="#">Kalendář závodů</a></li>
+                <!-- Menu uvodni stranky -->
+                <li><a href="#">Doporučení pro milovníký F1</a></li>
+            </ul>
+
+        </div>
+        <div class="center">
+            <div class="Main">
+                <p class="hlavni">Základní informace o jezdcích a týmech
+                    aktuální sezóny F1</p>
+
+                <p class="informace">Při kliknutí na jméno jezdce budete
+                    přesměřováni na stránku o jezdci</p>
+
+                <!-- ZACATEK REDBULL -->
+                <div class="RedBullRacing">
+                    <h3>Red Bull Racing</h3>
+                    <div class="textredbull">
+                        <p>
+                            Red Bull je Rakouský tým který je od sezóny 2022
+                            nejlepším týmem v F1, a to hlavně díky inovačním
+                            nápadům inženýrského týmu. <br>
+                            Za tým momentálně jezdí <a href="checo perez.html">
+                                Sergio Pérez</a>
+                            a <a href="max verstappen.html">Max Verstappen</a>
+                            který získal pro tým RedBull už 3 tituly. <br>
+                            <!-- POPISEK-->
+                            Manažer týmu je Christian Horner který v týmu působí
+                            od roku 2005.<br>
+                        </p>
+                    </div>
+                    <div class="obrazekredbull">
+                        <img class="redbullauto" src="Info o týmech a jezdcích/fotky auta/redbullauto.jpg" alt="redbull">
+
+                    </div>
+                    
+                </div>
+                <!-- KONEC REDBULL -->
+
+                <!-- ZACATEK FERRARI -->
+                <div class="Ferrari">
+                    <h3>Ferrari</h3>
+                    <div class="textFerrari">
+                        <p>
+
+                            Ferrari je nejznámější a nejúspěšnější tým v
+                            historii F1 a v aktuální sezóně je druhý
+                            nejrychlejší tým<br>
+                            Za Ferrari momentálně jezdí <a
+                                href="carlos sainz.html">Carlos Sainz</a> a <a
+                                href="charles leclerc.html">Charles Leclerc</a>
+                            <br> <!-- POPISEK-->
+                            Manažer týmu je Frederic Vasseur který v týmu působí
+                            od roku 2023.<br>
+                        </p>
+                    </div>
+                    <div class="obrazekferari">
+                        <img class="ferrariauto"
+                            src="Info o týmech a jezdcích/fotky auta/ferrariauto.jpg"
+                            alt="ferrari">
+                    </div>
+                </div>
+                <!-- KONEC FERRARI -->
+
+                <!-- ZACATEK MERCEDES -->
+                <div class="Mercedes">
+                    <h3>Mercedes-AMG Petronas Formula One Team</h3>
+                    <div class="textMercedes">
+                        <p>
+                            Mercedes dominoval formuli 1 v letech 2014-2020 <br>
+                            kdy vyhrál každý rok jak titul jezdců tak
+                            konstrukterský titul. <br>
+                            Za Mercedes momentálně jezdí <a
+                                href="lewis hamilton.html">Lewis Hamilton</a>
+                            který týmu získal 6 titulů a nováček <br> <a
+                                href="george russel.html">George Russel</a>
+                            který je v týmu od roku 2022 <br> <!-- POPISEK-->
+                            Manažer týmu je Toto Wolff který v týmu působí od
+                            roku 2013 <br>
+                        </p>
+                    </div>
+                    <div class="obrazekmercedes">
+                        <img class="mercedesauto"
+                            src="Info o týmech a jezdcích/fotky auta/mercedesauto.jpg"
+                            alt="mercedes">
+                    </div>
+                </div>
+                <!-- KONEC MERCEDES -->
+
+                <!-- ZACATEK MCLAREN -->
+                <div class="McLaren">
+                    <h3>McLaren F1 Team</h3>
+                    <div class="textMclaren">
+                        <p>
+                            McLaren je tým s obrovskou úspěchem a fanouškovskou
+                            základnou <br>která vznikla hlavně díky dvoum mladým
+                            jezdcům
+                            - <a href="lando norris.html">Lando Norris</a> a <a
+                                href="oscar piastri.html">Oscar Piastri</a> <br>
+                            kteří jezdí za tým McLaren<br> <!-- POPISEK-->
+                            Manažer týmu je Andrea Stella který v týmu působí od
+                            roku 2015.<br>
+                        </p>
+                    </div>
+                    <div class="obrazekmclaren">
+                        <img class="mclarenauto"
+                            src="Info o týmech a jezdcích/fotky auta/mclarenauto.jpg"
+                            alt="mclaren">
+                    </div>
+                </div>
+                <!-- KONEC MCLAREN -->
+
+                <!-- ZACATEK ASTON MARTIN -->
+                <div class="AstonMartin">
+                    <h3>Aston Martin Aramco Cognizant Formula One Team</h3>
+                    <div class="textAstonmartin">
+                        <p>
+                            Aston Martin je středopolový tým jejímž vlastníkem
+                            je Lawrence Stroll<br>který tým odkoupil v roce 2018
+                            a následně navázal spolupráci se značkou Aston
+                            Martin <br>
+                            Za tým momentálně jezdí legenda sportu <a
+                                href="fernando alonso.html">Fernando Alonso</a>
+                            a syn vlastníka týmu <a
+                                href="lance stroll.html">Lance Stroll</a> <br>
+                            <!-- POPISEK-->
+
+                        </p>
+                    </div>
+                    <div class="obrazekastonmartin">
+                        <img class="astonmartinauto"
+                            src="Info o týmech a jezdcích/fotky auta/astonmartinauto.jpg"
+                            alt="astonmartin">
+                    </div>
+                </div>
+                <!-- KONEC ASTON MARTIN -->
+
+                <!-- ZACATEK HAAS F1 TEAM -->
+                <div class="HaasF1Team">
+                    <h3>MoneyGram Haas F1 Team</h3>
+                    <div class="textHaasf1team">
+                        <p>
+                            Haas působí ve formuli 1 od sezóny 2016 a je to také
+                            jediný americký tým ve formuli 1 <br>
+                            Za tým momentálně jezdí dva veteráni sportu <a
+                                href="nico hulkenberg.html">Nico Hülkenberg</a>
+                            a <a href="kevin magnussen.html">Kevin Magnussen</a>
+                            <br> <!-- POPISEK-->
+                            Tým Hass vede také spolupráci s týmem Ferrari
+                        </p>
+                    </div>
+                    <div class="obrazekhaasf1team">
+                        <img class="haasf1teamauto"
+                            src="Info o týmech a jezdcích/fotky auta/haasf1teamauto.jpg"
+                            alt="haasf1team">
+                    </div>
+                </div>
+                <!-- KONEC HAAS F1 TEAM -->
+
+                <!-- ZACATEK WILLIAMS RACING -->
+                <div class="Williams">
+                    <h3>Williams Racing</h3>
+                    <div class="textWilliams">
+                        <p>
+
+                            Williams je tým s úspěšnou historii a silnou
+                            fanouškovskou základnou <br> ale v posledních letech
+                            se týmu nedaří<br>
+                            Za tým momentálně jezdí <a
+                                href="alex albon.html">Alex Albon</a> a <a
+                                href="logan sargeant.html">Logan Sargeant</a>
+                            <br> <!-- POPISEK-->
+                            Williams vede úzkou spolupráci s týmem Mercedes
+                        </p>
+                    </div>
+                    <div class="obrazekwilliams">
+                        <img class="williamsauto"
+                            src="Info o týmech a jezdcích/fotky auta/williamsauto.jpg"
+                            alt="williams">
+                    </div>
+                </div>
+                <!-- KONEC WILLIAMS RACING -->
+
+                <!-- ZACATEK KICK SAUBER -->
+                <div class="KickSauber">
+                    <h3>Stake F1 Team Kick Sauber</h3>
+                    <div class="textKicksauber">
+                        <p>
+                            Kick Sauber je tým který prošel rebrandingem pro
+                            sezónu 2024<br>
+                            Za tým momentálně jezdí <a
+                                href="valterri bottas.html">Valtteri Bottas</a>
+                            a <a href="zhou guanyu.html">Zhou Guanyu</a> <br>
+                            <!-- POPISEK-->
+                            Z týmu Kick Sauber se od sezóny 2026 stane tým Audi
+                        </p>
+                    </div>
+                    <div class="obrazekkicksauber">
+                        <img class="kicksauberauto"
+                            src="Info o týmech a jezdcích/fotky auta/kicksauberauto.jpg"
+                            alt="kicksauber">
+                    </div>
+                </div>
+                <!--  KONEC KICK SAUBER -->
+
+                <!-- ZACATEK RB -->
+                <div class="RB">
+                    <h3>Visa Cash App RB Formula One Team (RB)</h3>
+                    <div class="textRB">
+                        <p>
+                            RB je také tým který prošel rebrandingem pro sezónu
+                            2024<br>
+                            Tým RB byl a částečně stále je juniorským týmem týmu
+                            RedBull Racing <br>
+                            Za tým momentálně jezdí <a
+                                href="daniel ricciardo.html">Daniel
+                                Ricciardo</a> a <a href="yuki tsunoda.html">Yuki
+                                Tsunoda</a> <br> <!-- POPISEK-->
+                            <br>
+                        </p>
+                    </div>
+                    <div class="obrazekrb">
+                        <img class="rbauto"
+                            src="Info o týmech a jezdcích/fotky auta/rbauto.jpg"
+                            alt="rb">
+                    </div>
+                </div>
+                <!-- KONEC RB -->
+
+                <!-- ZACATEK ALPINE -->
+                <div class="Alpine">
+                    <h3>BWT Alpine F1 Team</h3>
+                    <div class="textAlpine">
+                        <p>
+                            Alpine je francouzský tým<br>
+                            Za tým momentálně jezdí <a
+                                href="esteban ocon.html">Esteban Ocon</a> a <a
+                                href="pierre gasly.html">Pierre Gasly</a> <br>
+                            <!-- POPISEK-->
+
+                        </p>
+                    </div>
+                    <div class="obrazekalpine">
+                        <img class="alpineauto"
+                            src="Info o týmech a jezdcích/fotky auta/alpineauto.webp"
+                            alt="alpine">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- KONEC ALPINE -->
